	PR optimization/13037 	* loop.c (update_giv_derive): Ignore redundant sets of a biv when 	calculating how to derive a giv from a biv.

* g77.f-torture/execute/13037.f: New test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@74572 138bc75d-0d04-0410-961f-82ee72b054a4